oblig2patch/src/tests/oblig2/errors/procedure2_fail.cmp
program procedure2_fail
begin

	proc Proc() : string 
	begin
           in
	   return  42  /* error, Proc declared as returning string */
	end;

	proc main()
	begin
	   in
	   Proc()
	end
end